@@ -2,7 +2,7 @@
 #ifndef _OPENCLAS_UNIT_TEST_SERIALIZATION_HPP_
 #define _OPENCLAS_UNIT_TEST_SERIALIZATION_HPP_
 
-#include <openclas/serialization.h>
+#include <openclas/serialization.hpp>
 
 BOOST_AUTO_TEST_SUITE( serialization )
 
